@@ -35,6 +35,7 @@ CHG: Ticket#755 - Upgraded to Prototype 1.6 and Scriptaculous 1.8 (j, Christophe
 ENH: Ticket#722 - Added Read Only capabilities to TInPlaceTextBox (Christophe)
 ENH: Ticket#741 - Added CDbConnection.currentTransaction property (Qiang)
 ENH: Ticket#743 - Added status code header in HTTP response when in error (Qiang)
+ENH: Ticket#745 - TWizard action MoveTo - allow specify step ID's (Christophe)
 ENH: Ticket#757 - TDateFormat and TNumberFormat now implement IDataRenderer (Qiang)
 ENH: Ticket#783 - Added date/time type support to soap implementation (Hongliang)
 ENH: Active Record supports multiple foreign references of the same table (Wei)
